--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!--
     Links
     -->
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="https://github.com/judaDeveloper/mainCoin/main.css" />
     <link rel="stylesheet" href="assets/css/defs.css" />
     <link rel="stylesheet" href="assets/css/lists.css" />
     <link rel="stylesheet" href="assets/css/modals.css" />
