--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     Links
     -->
     <link rel="stylesheet" href="https://judadeveloper.github.io/mainCoin/main.css" />
-    <link rel="stylesheet" href="assets/css/defs.css" />
-    <link rel="stylesheet" href="assets/css/lists.css" />
-    <link rel="stylesheet" href="assets/css/modals.css" />
-    <link rel="stylesheet" href="assets/css/Uforms.css" />
-    <link rel="stylesheet" href="assets/css/profile.css" />
+    <link rel="stylesheet" href="https://judadeveloper.github.io/mainCoin/defs.css" />
+    <link rel="stylesheet" href="https://judadeveloper.github.io/mainCoin/lists.css" />
+    <link rel="stylesheet" href="https://judadeveloper.github.io/mainCoin/modals.css" />
+    <link rel="stylesheet" href="https://judadeveloper.github.io/mainCoin/Uforms.css" />
+    <link rel="stylesheet" href="https://judadeveloper.github.io/mainCoin/profile.css" />
     <!--
     firebase
     -->
